overflow fix & tooltip fix

--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -65,16 +65,16 @@ $displayMap: (
   }
 }
 
-@include mobile{  .is-hidden-mobile{display: none}  }
-@include tablet{  .is-hidden-tablet{display: none}  }
-@include touch{  .is-hidden-touch{display: none}  }
-@include desktop{  .is-hidden-desktop{display: none}  }
-@include widescreen{  .is-hidden-desktop{display: none}  }
-@include fullhd{  .is-hidden-fullhd{display: none}  }
+@include mobile{  .is-hidden-mobile{display: none !important}  }
+@include tablet{  .is-hidden-tablet{display: none !important}  }
+@include touch{  .is-hidden-touch{display: none !important}  }
+@include desktop{  .is-hidden-desktop{display: none !important}  }
+@include widescreen{  .is-hidden-desktop{display: none !important}  }
+@include fullhd{  .is-hidden-fullhd{display: none !important}  }
 
-@include below-desktop{  .is-hidden-below-desktop{display: none}  }
-@include below-widescreen{  .is-hidden-below-widescreen{display: none}  }
-@include below-fullhd{  .is-hidden-below-fullhd{display: none}  }
+@include below-desktop{  .is-hidden-below-desktop{display: none !important}  }
+@include below-widescreen{  .is-hidden-below-widescreen{display: none !important}  }
+@include below-fullhd{  .is-hidden-below-fullhd{display: none !important}  }
 
 .is-hidden{
   display: none !important;
